Fix position of navbar-collapse

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -171,7 +171,7 @@ a {
 	background-color:#fff;
 	overflow-x:hidden;
 	z-index:3;
-	top:40px;
+	top:56px;
 	right:0;
 	overflow:hidden;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
